delete useless import